# batuketa

./: README.md  pyproject.toml
.github/workflows/: build-3.7.yml  build-3.8.yml  build.yml  python-package.yml
batuketa/: constants.py  data.py  models.py
qa/: pychecks.sh  tidy-up.sh
scripts/: train_attention_model.py
tests/: test_batuketa.py  test_data.py  test_models.py
