[tool.poetry]
name = "batuketa"
version = "0.1.0"
description = ""
authors = ["Grigory Bordyugov <gregbg@gmail.com>"]

[tool.black]
line-length = 80
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
force_single_line = true
line_length = 80

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
isort = "^5.8.0"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
